<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HOME"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="S"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/edit_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:height="50dp"
        android:background="@drawable/btn_bg"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:text="@string/edit_search"
        android:textColor="@color/white"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/edit_search"
        android:text="@string/btn_search"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg" />

    <Button
        android:id="@+id/btn_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/btn_contacts"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>