<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".LoginActivity">
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/splashScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_SplashScreen_message"
                android:textColor="@color/white"
                android:textSize="50sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/LogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="LogIn"
                android:textSize="30sp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/LogIn">

                
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Username"
                       android:textColor="@color/white"
                       android:textSize="15sp"/>

                   <EditText
                       android:id="@+id/username"
                       android:layout_width="match_parent"
                       android:layout_height="40dp"
                       android:layout_marginTop="5dp"
                       android:background="@drawable/et_bg"
                       android:textSize="15sp"
                       android:textColor="@color/white"
                       android:paddingLeft="15dp"
                       android:paddingRight="15dp"/>

               </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Password"
                        android:textColor="@color/white"
                        android:textSize="15sp"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linlay1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_above="@id/btn_login"
                    android:layout_marginTop="15dp"
                    android:paddingRight="150dp">

                    <CheckBox
                        android:id="@+id/box_keepLoggedIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/box_remember_message"/>

                </LinearLayout>

                <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/btn_login"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"/>

                <TextView
                    android:id="@+id/view_invalid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/red"
                    android:layout_below="@id/btn_login"
                    android:textAlignment="center"
                    android:layout_marginTop="50dp"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="register"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>



</RelativeLayout>